tests/ui/closure_missing_arg_types_multi.rs
use ir_assert::assert_ir;

fn main() {
    assert_ir!(basic_blocks.len().ge(1), |a, b| a + b);
}
